# checkers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/checkers-app/: Cargo.toml
crates/checkers-app/src/: main.rs
crates/checkers-app/src/application/enums/: message.rs
crates/checkers-app/src/application/structs/: game_data.rs  mod.rs
crates/checkers-app/src/application/structs/board/: board.rs  message.rs  mod.rs  state.rs
crates/checkers-lib/: Cargo.toml
crates/checkers-lib/src/enums/: direction.rs  mod.rs  piece.rs  route.rs
crates/checkers-lib/src/structs/: position.rs
src/: main.rs
src/application/: app.rs  button_style.rs  io.rs  mod.rs
src/application/enums/: direction.rs  message.rs  mod.rs  piece.rs  route.rs  side.rs  take_direction.rs
src/application/structs/: board.rs  game_data.rs  mod.rs  position.rs
src/application/structs/board/: board.rs  interaction.rs  message.rs  mod.rs  state.rs
src/application/structs/creation_modal/: message.rs  mod.rs  modal_type.rs
src/application/structs/vcs/: message.rs  mod.rs
src/application/structs/vcs/serialization/: branch_ser.rs  commit_ser.rs  mod.rs  vcs_ser.rs
src/application/structs/vcs/structs/: branch.rs  commit.rs  mod.rs
