[package]
name = "checkers-app"
authors.workspace = true
description.workspace = true
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checkers-lib = { path = "../checkers-lib" }

serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.18.0"
itertools = "0.12.0"
iced = { version = "0.10.0", features = ["canvas"] }

[profile.release]
panic = "abort"
